--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-api": "^9.0.2",
     "@shopify/shopify-app-remix": "^2.4.0",
+    "@shopify/shopify-app-session-storage-mongodb": "^3.0.2",
     "@shopify/shopify-app-session-storage-prisma": "^3.0.0",
     "axios": "^1.6.7",
     "isbot": "^4.1.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.2.1",
     "node-cron": "^3.0.3",
     "prisma": "^5.8.0",
     "react": "^18.2.0",
